remove some commented out code